jenkins/jenkins-ansible-deployment-test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops-tools
  name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: srbhdockerhub1st/anisble-jenkins-root-docker-image-new
        ports:
        - containerPort: 8080
        - containerPort: 50000
        resources:
          limits:
            memory: "3Gi"
          requests:
            memory: "2Gi"
