jenkins/jenkins-ansible-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec:
  selector:
    app: jenkins
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30000  # You can choose a different port in the range 30000-32767
      protocol: TCP
    - name: agent
      port: 50000
      targetPort: 50000
      nodePort: 30001  # You can choose a different port in the range 30000-32767
      protocol: TCP
  type: NodePort
